--- a/app/build.gradle
+++ b/app/build.gradle
@@ -75,6 +75,8 @@ dependencies {
     androidTestImplementation "androidx.compose.ui:ui-test-junit4:$compose_version"
     debugImplementation "androidx.compose.ui:ui-tooling:$compose_version"
     debugImplementation "androidx.compose.ui:ui-test-manifest:$compose_version"
+    implementation "androidx.lifecycle:lifecycle-viewmodel-compose:2.5.0-alpha01"
+    implementation "androidx.navigation:navigation-compose:2.5.0-alpha01"
 
     implementation 'com.google.accompanist:accompanist-flowlayout:0.22.0-rc'
 
