--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,7 +2,7 @@ plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
     id 'com.google.gms.google-services'
-    id 'kotlin-kapt'
+    id("com.google.devtools.ksp") version "1.6.10-1.0.4"
 }
 
 android {
@@ -18,15 +18,6 @@ android {
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         vectorDrawables {
             useSupportLibrary true
-        }
-
-        javaCompileOptions {
-            annotationProcessorOptions {
-                arguments += [
-                        "room.schemaLocation":"$projectDir/schemas".toString(),
-                        "room.incremental":"true",
-                        "room.expandProjection":"true"]
-            }
         }
     }
 
@@ -46,6 +37,16 @@ android {
     buildFeatures {
         compose true
     }
+    kotlin {
+        sourceSets {
+            debug {
+                kotlin.srcDir("build/generated/ksp/debug/kotlin")
+            }
+            release {
+                kotlin.srcDir("build/generated/ksp/release/kotlin")
+            }
+        }
+    }
     composeOptions {
         kotlinCompilerExtensionVersion compose_version
     }
@@ -55,17 +56,27 @@ android {
         }
     }
 }
+
+ksp {
+    arg("room.schemaLocation", "$projectDir/schemas".toString())
+    arg("room.incremental", "true")
+    arg("room.expandProjection", "true")
+}
+
 dependencies {
-    implementation platform('com.google.firebase:firebase-bom:29.0.3')
+    implementation platform('com.google.firebase:firebase-bom:29.1.0')
     implementation 'com.google.firebase:firebase-auth'
     implementation 'com.google.firebase:firebase-firestore'
 
     implementation 'com.firebaseui:firebase-ui-auth:8.0.0'
 
-    def room_version = "2.4.1"
+    def room_version = '2.4.2'
     implementation "androidx.room:room-ktx:$room_version"
-    kapt "androidx.room:room-compiler:$room_version"
+    ksp "androidx.room:room-compiler:$room_version"
 
+    implementation 'io.github.raamcosta.compose-destinations:core:1.3.2-beta'
+    implementation 'io.github.raamcosta.compose-destinations:animations-core:1.3.2-beta'
+    ksp 'io.github.raamcosta.compose-destinations:ksp:1.3.2-beta'
 
     implementation 'androidx.core:core-ktx:1.7.0'
 
@@ -75,13 +86,14 @@ dependencies {
     androidTestImplementation "androidx.compose.ui:ui-test-junit4:$compose_version"
     debugImplementation "androidx.compose.ui:ui-tooling:$compose_version"
     debugImplementation "androidx.compose.ui:ui-test-manifest:$compose_version"
-    implementation "androidx.lifecycle:lifecycle-viewmodel-compose:2.5.0-alpha02"
-    implementation "androidx.navigation:navigation-compose:2.5.0-alpha02"
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-compose:2.5.0-alpha03'
+    implementation 'androidx.navigation:navigation-compose:2.5.0-alpha03'
 
-    implementation 'com.google.accompanist:accompanist-flowlayout:0.22.0-rc'
+    implementation 'com.google.accompanist:accompanist-flowlayout:0.24.3-alpha'
 
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.4.1'
     implementation 'androidx.activity:activity-compose:1.4.0'
+    implementation("br.com.devsrsouza.compose.icons.android:font-awesome:1.0.0")
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
