--- a/app/build.gradle
+++ b/app/build.gradle
@@ -84,6 +84,7 @@ dependencies {
     implementation 'androidx.navigation:navigation-compose:2.5.0-alpha03'
 
     implementation 'com.google.accompanist:accompanist-flowlayout:0.24.3-alpha'
+    implementation "com.google.accompanist:accompanist-insets:0.24.3-alpha"
 
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.4.1'
     implementation 'androidx.activity:activity-compose:1.4.0'
