--- a/app/build.gradle
+++ b/app/build.gradle
@@ -76,11 +76,12 @@ dependencies {
 
     implementation "androidx.compose.ui:ui:$compose_version"
     implementation "androidx.compose.material:material:$compose_version"
+    implementation "androidx.compose.material3:material3:1.0.0-alpha08"
     implementation "androidx.compose.ui:ui-tooling-preview:$compose_version"
     androidTestImplementation "androidx.compose.ui:ui-test-junit4:$compose_version"
     debugImplementation "androidx.compose.ui:ui-tooling:$compose_version"
     debugImplementation "androidx.compose.ui:ui-test-manifest:$compose_version"
-    implementation 'androidx.lifecycle:lifecycle-viewmodel-compose:2.5.0-alpha04'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-compose:2.5.0-alpha05'
     implementation 'androidx.navigation:navigation-compose:2.5.0-alpha03'
 
     implementation 'com.google.accompanist:accompanist-flowlayout:0.24.3-alpha'
