--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,17 +1,17 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
-    id("com.google.devtools.ksp") version "1.6.10-1.0.4"
+    id("com.google.devtools.ksp") version "1.7.20-1.0.8"
 }
 
 android {
-    compileSdk 32
-    namespace "uz.qmgroup.pharmabook"
+    compileSdk 33
+    namespace "uz.qmgroup.moneyandbanks"
 
     defaultConfig {
-        applicationId "uz.qmgroup.pharmabook"
+        applicationId "uz.qmgroup.moneyandbanks"
         minSdk 23
-        targetSdk 32
+        targetSdk 33
         versionCode 1
         versionName "1.2.0"
 
@@ -48,7 +48,7 @@ android {
         }
     }
     composeOptions {
-        kotlinCompilerExtensionVersion compose_version
+        kotlinCompilerExtensionVersion '1.3.2'
     }
     packagingOptions {
         resources {
@@ -64,15 +64,15 @@ ksp {
 }
 
 dependencies {
-    def room_version = '2.4.2'
+    def room_version = '2.4.3'
     implementation "androidx.room:room-ktx:$room_version"
     ksp "androidx.room:room-compiler:$room_version"
 
-    implementation 'io.github.raamcosta.compose-destinations:core:1.3.2-beta'
-    implementation 'io.github.raamcosta.compose-destinations:animations-core:1.3.2-beta'
-    ksp 'io.github.raamcosta.compose-destinations:ksp:1.3.2-beta'
+    implementation 'io.github.raamcosta.compose-destinations:core:1.7.25-beta'
+    implementation 'io.github.raamcosta.compose-destinations:animations-core:1.7.15-beta'
+    ksp 'io.github.raamcosta.compose-destinations:ksp:1.7.25-beta'
 
-    implementation 'androidx.core:core-ktx:1.7.0'
+    implementation 'androidx.core:core-ktx:1.9.0'
 
     implementation "androidx.compose.ui:ui:$compose_version"
     implementation "androidx.compose.material:material:$compose_version"
@@ -80,14 +80,14 @@ dependencies {
     androidTestImplementation "androidx.compose.ui:ui-test-junit4:$compose_version"
     debugImplementation "androidx.compose.ui:ui-tooling:$compose_version"
     debugImplementation "androidx.compose.ui:ui-test-manifest:$compose_version"
-    implementation 'androidx.lifecycle:lifecycle-viewmodel-compose:2.5.0-alpha04'
-    implementation 'androidx.navigation:navigation-compose:2.5.0-alpha03'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-compose:2.5.1'
+    implementation 'androidx.navigation:navigation-compose:2.5.3'
 
     implementation 'com.google.accompanist:accompanist-flowlayout:0.24.3-alpha'
     implementation "com.google.accompanist:accompanist-insets:0.24.3-alpha"
 
-    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.4.1'
-    implementation 'androidx.activity:activity-compose:1.4.0'
+    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.5.1'
+    implementation 'androidx.activity:activity-compose:1.6.1'
     implementation("br.com.devsrsouza.compose.icons.android:font-awesome:1.0.0")
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
